--- a/franklyn-frontned-lit/index.html
+++ b/franklyn-frontned-lit/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Users</title>
+    <title>Franklyn-3</title>
   </head>
   <body>
     <user-table></user-table>
+    <exam-form></exam-form>
   </body>
 </html>
