(frontend) working on Dashboard for examiner

--- a/franklyn-frontned-lit/index.html
+++ b/franklyn-frontned-lit/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Franklyn-3</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
   <body>
+  <h1>Dashboard</h1>
     <user-table></user-table>
     <exam-form></exam-form>
   <session-view></session-view>
