(frontend) working on Dashboard for examiner

--- a/franklyn-frontned-lit/index.html
+++ b/franklyn-frontned-lit/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
   <h1>Dashboard</h1>
-    <user-table></user-table>
-    <exam-form></exam-form>
+   <div id="flex-container">
+       <user-table id="flex-column"></user-table>
+       <exam-form id="flex-column"></exam-form>
+   </div>
   <session-view></session-view>
   </body>
 </html>
