--- a/franklyn-frontned-lit/index.html
+++ b/franklyn-frontned-lit/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Franklyn-3</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="styles/style.css" /> -->
   </head>
   <body>
-  <h1>Dashboard</h1>
+    <!-- <h1>Dashboard</h1>
    <div id="flex-container">
        <user-table id="flex-column"></user-table>
        <exam-form id="flex-column"></exam-form>
    </div>
-  <session-view></session-view>
+  <session-view></session-view> -->
+    <franklyn-nav></franklyn-nav>
+    <router-container></router-container>
   </body>
 </html>
