--- a/franklyn-frontned-lit/index.html
+++ b/franklyn-frontned-lit/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Franklyn-3</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
   </head>
   <body>
     <!-- <h1>Dashboard</h1>
@@ -14,6 +13,8 @@
    </div>
   <session-view></session-view> -->
     <franklyn-nav></franklyn-nav>
-    <router-container></router-container>
+    <div style="margin: 3em 2em 1em 2em">
+      <router-container></router-container>
+    </div>
   </body>
 </html>
