setup(streaming server)

--- a/streaming-server/src/main/resources/META-INF/resources/index.html
+++ b/streaming-server/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>franklyn-frame-backend - 1.0-SNAPSHOT</title>
+        <title>streaming-server - 1.0-SNAPSHOT</title>
         <style>
             body {
                 margin: 0;
@@ -236,9 +236,9 @@
                             <h5>Application</h5>
                             <ul>
                                 <li>GroupId: <code>at.htl</code></li>
-                                <li>ArtifactId: <code>franklyn-frame-backend</code></li>
+                                <li>ArtifactId: <code>streaming-server</code></li>
                                 <li>Version: <code>1.0-SNAPSHOT</code></li>
-                                <li>Quarkus Version: <code>3.6.4</code></li>
+                                <li>Quarkus Version: <code>3.6.5</code></li>
                             </ul>
                         </div>
                     </div>
@@ -266,6 +266,11 @@
                     </ul>
                 </div>
                 <div class="right-column">
+                    <h3>Selected extensions</h3>
+                    <ul>
+                        <li title="Jackson serialization support for RESTEasy Reactive. This extension is not compatible with the quarkus-resteasy extension, or any of the extensions that depend on it">RESTEasy Reactive Jackson</li>
+                        <li title="Jackson serialization support for REST Client Reactive">RESTEasy Reactive's REST Client Jackson</li>
+                    </ul>
                     <h5><a href="https://quarkus.io/guides/">Documentation</a></h5>
                     <p>Practical step-by-step guides to help you achieve a specific goal. Use them to help get your work
                         done.</p>
